--- a/editors/Makefile
+++ b/editors/Makefile
@@ -1,30 +1,31 @@
+# $NetBSD: Makefile,v 1.2 1997/10/06 12:59:52 agc Exp $
 # FreeBSD Id: Makefile,v 1.44 1997/09/13 20:19:28 chuckr Exp
 #
 
-    SUBDIR += asedit
-    SUBDIR += axe
-    SUBDIR += beav
-    SUBDIR += bpatch
-    SUBDIR += e93
-    SUBDIR += emacs
-    SUBDIR += gvim
-    SUBDIR += jed
-    SUBDIR += joe
-    SUBDIR += jove
-    SUBDIR += mule
-    SUBDIR += mule-common
-    SUBDIR += nedit
-    SUBDIR += nvi
-    SUBDIR += staroffice
-    SUBDIR += thoteditor
-    SUBDIR += uemacs
-    SUBDIR += uzap
+#    SUBDIR += asedit
+#    SUBDIR += axe
+#    SUBDIR += beav
+#    SUBDIR += bpatch
+#    SUBDIR += e93
+#    SUBDIR += emacs
+#    SUBDIR += gvim
+#    SUBDIR += jed
+#    SUBDIR += joe
+#    SUBDIR += jove
+#    SUBDIR += mule
+#    SUBDIR += mule-common
+#    SUBDIR += nedit
+#    SUBDIR += nvi
+#    SUBDIR += staroffice
+#    SUBDIR += thoteditor
+#    SUBDIR += uemacs
+#    SUBDIR += uzap
     SUBDIR += vile
-    SUBDIR += vim
-    SUBDIR += vim5beta
-    SUBDIR += xcoral
-    SUBDIR += xed
-    SUBDIR += xemacs
+#    SUBDIR += vim
+#    SUBDIR += vim5beta
+#    SUBDIR += xcoral
+#    SUBDIR += xed
+#    SUBDIR += xemacs
     SUBDIR += xemacs20
     SUBDIR += xvile
 
