--- a/editors/vile/Makefile
+++ b/editors/vile/Makefile
@@ -1,3 +1,4 @@
+# $NetBSD: Makefile,v 1.2 1997/10/06 13:03:07 agc Exp $
 # New ports collection makefile for:    vile
 # Version required:     7.2
 # Date created:         Wed Nov 26, 1996
@@ -6,11 +7,12 @@
 # FreeBSD Id: Makefile,v 1.13 1997/09/06 19:55:09 gj Exp
 #
 
-DISTNAME=	vile-7.2
+DISTNAME=	vile
+PKGNAME=	vile-7.2c
+WRKSRC=		${WRKDIR}/${PKGNAME}
 CATEGORIES=	editors
 MASTER_SITES=   ftp://ftp.clark.net/pub/dickey/vile/ \
 		ftp://id.wing.net/pub/pgf/vile/
-EXTRACT_SUFX=	.tgz
 
 MAINTAINER=	gj@freebsd.org
 
