--- a/devel/automake/Makefile
+++ b/devel/automake/Makefile
@@ -1,3 +1,4 @@
+# $NetBSD: Makefile,v 1.2 1997/10/06 14:30:54 agc Exp $
 # New ports collection makefile for:	automake
 # Version required:	1.2
 # Date created:		15 March 1997
@@ -13,11 +14,17 @@ MASTER_SITES=	${MASTER_SITE_GNU}
 MAINTAINER=	fujimoto@oscar.elec.waseda.ac.jp
 
 GNU_CONFIGURE=	yes
-CONFIGURE_ENV=	PERL=/usr/bin/perl
+CONFIGURE_ENV=	PERL=${PREFIX}/bin/perl
 STRIP=		 # none
+
+OPSYS!= uname -s
+
+.if (${OPSYS} != "NetBSD")
+# agc - this assumes /usr/share/info/dir and install-info
 pre-install:
 	@if [ ! -f ${PREFIX}/info/dir ]; then \
 	  ${SED} -ne '1,/Menu:/p' /usr/share/info/dir > ${PREFIX}/info/dir; \
 	 fi
+.endif
 
 .include <bsd.port.mk>
