--- a/devel/gmake/Makefile
+++ b/devel/gmake/Makefile
@@ -1,3 +1,4 @@
+# $NetBSD: Makefile,v 1.2 1997/10/06 14:31:01 agc Exp $
 # New ports collection makefile for:	GNU make
 # Version required:     3.75
 # Date created:		11 September 1994
@@ -14,6 +15,13 @@ MASTER_SITES=   ${MASTER_SITE_GNU}
 GNU_CONFIGURE=	yes
 MAN1=		gmake.1
 
+OPSYS ?= `uname -s`
+
+.if (${OPSYS} == "NetBSD")
+post-install:
+	/bin/chmod g-s ${PREFIX}/bin/gmake
+	/usr/bin/chgrp ${BINGRP} ${PREFIX}/bin/gmake
+.else
 # joerg@freebsd.org says our getloadavg() no longer requires setgid kmem
 post-install:
 	/bin/chmod g-s ${PREFIX}/bin/gmake
@@ -22,5 +30,6 @@ post-install:
 	  ${SED} -ne '1,/Menu:/p' /usr/share/info/dir > ${PREFIX}/info/dir; \
 	 fi
 	@install-info ${PREFIX}/info/make.info ${PREFIX}/info/dir
+.endif
 
 .include <bsd.port.mk>
