--- a/devel/id-utils/Makefile
+++ b/devel/id-utils/Makefile
@@ -1,3 +1,4 @@
+# $NetBSD: Makefile,v 1.2 1997/10/06 14:35:53 agc Exp $
 # New ports collection makefile for:	id-utils
 # Version required:	3.2
 # Date created:		22 Aug 1996
@@ -12,8 +13,13 @@ MASTER_SITES=	${MASTER_SITE_GNU}
 
 MAINTAINER=	pst@FreeBSD.ORG
 
-# need to byte-compile a .el file
+OPSYS!=		uname -s
+
+.if (${OPSYS} == "FreeBSD")
+# agc - don't do this if we're on NetBSD
+# FreeBSD use emacs to byte-compile a .el file
 BUILD_DEPENDS=	emacs:${PORTSDIR}/editors/emacs
+.endif
 
 GNU_CONFIGURE=	yes
 USE_GMAKE=	yes
