--- a/lang/scheme48/Makefile
+++ b/lang/scheme48/Makefile
@@ -1,3 +1,4 @@
+# $NetBSD: Makefile,v 1.2 1997/10/06 15:28:52 agc Exp $
 # New ports collection makefile for:    scheme48
 # Version required:     0.46
 # Date created:         25 Aug 1997
