--- a/devel/gmake/Makefile
+++ b/devel/gmake/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.2 1997/10/06 14:31:01 agc Exp $
+# $NetBSD: Makefile,v 1.3 1997/10/07 13:01:56 agc Exp $
 # New ports collection makefile for:	GNU make
 # Version required:     3.75
 # Date created:		11 September 1994
@@ -15,7 +15,7 @@ MASTER_SITES=   ${MASTER_SITE_GNU}
 GNU_CONFIGURE=	yes
 MAN1=		gmake.1
 
-OPSYS ?= `uname -s`
+OPSYS!= 	uname -s
 
 .if (${OPSYS} == "NetBSD")
 post-install:
