--- a/devel/automake/Makefile
+++ b/devel/automake/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.2 1997/10/06 14:30:54 agc Exp $
+# $NetBSD: Makefile,v 1.3 1997/10/09 09:24:05 agc Exp $
 # New ports collection makefile for:	automake
 # Version required:	1.2
 # Date created:		15 March 1997
@@ -17,14 +17,15 @@ GNU_CONFIGURE=	yes
 CONFIGURE_ENV=	PERL=${PREFIX}/bin/perl
 STRIP=		 # none
 
-OPSYS!= uname -s
+OPSYS!= 	uname -s
 
-.if (${OPSYS} != "NetBSD")
-# agc - this assumes /usr/share/info/dir and install-info
+.if (${OPSYS} == "NetBSD")
+BUILD_DEPENDS=	install-info:${PORTSDIR}/devel/gtexinfo
+.endif
+
 pre-install:
 	@if [ ! -f ${PREFIX}/info/dir ]; then \
 	  ${SED} -ne '1,/Menu:/p' /usr/share/info/dir > ${PREFIX}/info/dir; \
 	 fi
-.endif
 
 .include <bsd.port.mk>
