--- a/devel/m4/Makefile
+++ b/devel/m4/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.2 1997/10/06 14:31:03 agc Exp $
+# $NetBSD: Makefile,v 1.3 1997/10/09 09:25:19 agc Exp $
 # New ports collection makefile for:	m4
 # Version required:     1.4
 # Date created:		25 October 1994
@@ -16,15 +16,16 @@ CONFIGURE_ARGS= --program-prefix=g
 
 OPSYS!= uname -s
 
+.if (${OPSYS} == "NetBSD")
+BUILD_DEPENDS=	install-info:${PORTSDIR}/devel/gtexinfo
+.endif
+
 post-install:
 	@${MKDIR} ${PREFIX}/share/examples/gm4
 	${INSTALL_DATA} ${WRKSRC}/examples/*.m4 ${PREFIX}/share/examples/gm4
-.if (${OPSYS} != "NetBSD")
-# agc - this assumes /usr/share/info/dir and install-info
 	@if [ ! -f ${PREFIX}/info/dir ]; then \
 	  ${SED} -ne '1,/Menu:/p' /usr/share/info/dir > ${PREFIX}/info/dir; \
 	 fi
 	@install-info ${PREFIX}/info/m4.info ${PREFIX}/info/dir
-.endif
 
 .include <bsd.port.mk>
