--- a/devel/gindent/Makefile
+++ b/devel/gindent/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.2 1997/10/06 14:30:58 agc Exp $
+# $NetBSD: Makefile,v 1.3 1997/10/09 09:30:40 agc Exp $
 # New ports collection makefile for:   indent
 # Version required:    1.9.1
 # Date created:        28 August 1997
@@ -7,22 +7,30 @@
 # FreeBSD Id: Makefile,v 1.1.1.1 1997/08/29 09:20:00 obrien Exp
 #
         
-DISTNAME=      indent-1.9.1
-CATEGORIES=    devel
-MASTER_SITES=  ${MASTER_SITE_GNU}
+DISTNAME=	indent-1.9.1
+CATEGORIES=	devel
+MASTER_SITES=	${MASTER_SITE_GNU}
 
 GNU_CONFIGURE=	yes
 
-MAINTAINER=    kchowksey@hss.hns.com
+MAINTAINER=	kchowksey@hss.hns.com
         
-MAN1=          indent.1
+MAN1=		indent.1
 
-OPSYS!= uname -s
+MAKEFILE=	makefile
+
+OPSYS!= 	uname -s
+
+.if (${OPSYS} == "NetBSD")
+BUILD_DEPENDS=	install-info:${PORTSDIR}/devel/gtexinfo
+.endif
+
+# agc - force makeinfo to create a new info file with the Dir info.
+pre-install:
+	@rm -f indent.info
 
 post-install:
 	@strip ${PREFIX}/bin/indent
-.if (${OPSYS} != "NetBSD")
-# agc - this assumes /usr/share/info/dir and install-info
 	@test -d ${PREFIX}/info || ${MKDIR} ${PREFIX}/info  \
 		&& chmod a+rx ${PREFIX}/info
 	@if [ ! -f ${PREFIX}/info/dir ]; then \
@@ -33,6 +41,5 @@ post-install:
 	  fi ; \
 	fi
 	@install-info ${PREFIX}/info/indent.info ${PREFIX}/info/dir
-.endif
 
 .include <bsd.port.mk>
