--- a/x11/xfishtank/Makefile
+++ b/x11/xfishtank/Makefile
@@ -1,3 +1,4 @@
+# $NetBSD: Makefile,v 1.2 1997/10/09 11:54:33 agc Exp $
 # New ports collection makefile for:   xfishtank
 # Version required:    2.2
 # Date created:        24th April 1997
