--- a/x11/xmascot/Makefile
+++ b/x11/xmascot/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.2 1997/10/09 11:56:01 agc Exp $
+# $NetBSD: Makefile,v 1.3 1997/10/09 12:34:13 agc Exp $
 # New ports collection makefile for:   xmascot
 # Version required:    2.5p2
 # Date created:        20 November 1996
@@ -14,9 +14,14 @@ MASTER_SITES=	ftp://cclub.tutcc.tut.ac.jp/pub/xmascot/
 
 MAINTAINER=	Nakai@Mlab.t.u-tokyo.ac.jp
 
+OPSYS!=		uname -s
+
 USE_GMAKE=	yes
 USE_IMAKE=	yes
 MAN1=		xmascot.1
+
+.if (${OPSYS} != "NetBSD")
 MANCOMPRESSED=	yes
+.endif
 
 .include <bsd.port.mk>
