--- a/plan9/Xg/Makefile
+++ b/plan9/Xg/Makefile
@@ -1,3 +1,4 @@
+# $NetBSD: Makefile,v 1.2 1997/10/09 14:35:21 agc Exp $
 # New ports collection makefile for:    libXg
 # Version required:     ????? arbitrarily picked 1.0 for version
 # Date created:         Sun Aug 13 12:36:14 CDT 1995
