--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.2 1997/10/06 14:20:56 agc Exp $
+# $NetBSD: Makefile,v 1.3 1997/10/10 19:58:01 agc Exp $
 # FreeBSD Id: Makefile,v 1.78 1997/10/01 08:32:59 cracauer Exp
 #
 
@@ -35,6 +35,7 @@
 #    SUBDIR += linuxgdb
     SUBDIR += m4
 #    SUBDIR += makedepend
+    SUBDIR += mit-pthreads
 #    SUBDIR += mkmf
 #    SUBDIR += mprof
     SUBDIR += noweb
