--- a/misc/screen/Makefile
+++ b/misc/screen/Makefile
@@ -3,7 +3,8 @@
 # Date created:         25 Nov 1994
 # Whom:                 ache
 #
-# $Id: Makefile,v 1.1.1.1 1997/10/11 21:47:45 hubertf Exp $
+# $NetBSD: Makefile,v 1.2 1997/10/11 22:14:42 hubertf Exp $
+# FreeBSD Id: Makefile,v 1.17 1997/06/16 06:39:51 max Exp
 #
 
 DISTNAME=       screen-3.7.2
@@ -11,15 +12,14 @@ CATEGORIES=	misc
 MASTER_SITES=   ftp://ftp.uni-erlangen.de/pub/utilities/screen/ \
 		${MASTER_SITE_GNU}
 
-MAINTAINER=	ache@FreeBSD.ORG
+MAINTAINER=	hubertf@netbsd.org
 
+BUILD_DEPENDS=	${PREFIX}/bin/install-info:${PORTSDIR}/devel/gtexinfo
+RUN_DEPENDS=	${PREFIX}/bin/install-info:${PORTSDIR}/devel/gtexinfo
 GNU_CONFIGURE=	yes
 MAN1=		screen.1
 
 post-install:
-	@if [ ! -f ${PREFIX}/info/dir ]; then \
-	  ${SED} -ne '1,/Menu:/p' /usr/share/info/dir > ${PREFIX}/info/dir; \
-	 fi
 	@install-info ${PREFIX}/info/screen.info ${PREFIX}/info/dir
 
 .include <bsd.port.mk>
