--- a/lang/icon/Makefile
+++ b/lang/icon/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.2 1997/10/06 15:19:30 agc Exp $
+# $NetBSD: Makefile,v 1.3 1997/10/12 23:38:25 hubertf Exp $
 # New ports collection makefile for:    icon
 # Version required:     9.3
 # Date created:         05 April 1995
@@ -16,5 +16,12 @@ MAINTAINER=	ports@freebsd.org
 
 NO_WRKSUBDIR=	true
 ALL_TARGET=	Icon Icon-iconc
+
+OPSYS!=         uname -s
+.if (${OPSYS} == "NetBSD")
+MANCOMPRESSED=	yes
+.endif
+
+MAN1=		icon.1
 
 .include <bsd.port.mk>
