--- a/devel/mit-pthreads/Makefile
+++ b/devel/mit-pthreads/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1.1.1 1997/10/10 19:52:02 agc Exp $
+# $NetBSD: Makefile,v 1.2 1997/10/13 11:36:19 agc Exp $
 # New ports collection makefile for:	MIT pthreads
 # Version required:     1.60beta6
 # Date created:		10th October 1997
@@ -10,9 +10,8 @@ PKGNAME=        mit-pthreads-1.60b6
 CATEGORIES=	devel
 MASTER_SITES=   ftp://sipb.mit.edu/pub/pthreads/
 
-GNU_CONFIGURE=	yes
-USE_GMAKE=	yes
-MAKEFILE=	GNUmakefile
+HAS_CONFIGURE=	yes
+CONFIGURE_ARGS+=	--prefix=${PREFIX}/pthreads
 
 post-install:
 	find ${PREFIX}/pthreads/include -type f -print|xargs chmod 644
