--- a/misc/team/Makefile
+++ b/misc/team/Makefile
@@ -1,3 +1,4 @@
+# $NetBSD: Makefile,v 1.3 1997/10/13 12:49:10 agc Exp $
 # New ports collection makefile for:	team
 # Version required:	3.1 (From the RCS Id line of team.c)
 # Date created:		1 July 1995
