--- a/misc/Makefile
+++ b/misc/Makefile
@@ -1,4 +1,5 @@
-# $Id: Makefile,v 1.3 1997/10/11 22:17:46 hubertf Exp $
+# $NetBSD: Makefile,v 1.4 1997/10/13 12:57:38 agc Exp $
+# FreeBSD Id: Makefile,v 1.3 1997/10/11 22:17:46 hubertf Exp
 #
 
 #    SUBDIR += amanda
@@ -36,7 +37,7 @@
 #    SUBDIR += rpm
     SUBDIR += screen
 #    SUBDIR += splitvt
-#    SUBDIR += team
+    SUBDIR += team
 #    SUBDIR += tkcron
 #    SUBDIR += tkinfo
 #    SUBDIR += tkman
