--- a/misc/Makefile
+++ b/misc/Makefile
@@ -1,5 +1,5 @@
-# $NetBSD: Makefile,v 1.5 1997/10/13 14:07:30 agc Exp $
-# FreeBSD Id: Makefile,v 1.3 1997/10/11 22:17:46 hubertf Exp
+# $NetBSD: Makefile,v 1.6 1997/10/13 15:09:19 agc Exp $
+# FreeBSD Id: Makefile,v 1.117 1997/10/13 04:41:07 max Exp
 #
 
     SUBDIR += amanda
@@ -34,7 +34,7 @@
 #    SUBDIR += p5-Locale-Codes
 #    SUBDIR += p5-Search
 #    SUBDIR += plan
-#    SUBDIR += rpm
+    SUBDIR += rpm
     SUBDIR += screen
 #    SUBDIR += splitvt
     SUBDIR += team
