--- a/plan9/9term/Makefile
+++ b/plan9/9term/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.2 1997/10/09 14:35:18 agc Exp $
+# $NetBSD: Makefile,v 1.3 1997/10/17 13:03:49 hubertf Exp $
 # New ports collection makefile for:    9term
 # Version required:     1.6.3
 # Date created:         Sun Aug 13 12:36:14 CDT 1995
@@ -15,7 +15,14 @@ MASTER_SITES=   ftp://ftp.ecf.toronto.edu/pub/plan9/matty/
 MAINTAINER=	erich@FreeBSD.org
 
 # needs library and private header, but not during runtime
-BUILD_DEPENDS=	/always_build_it:${PORTSDIR}/plan9/sam
+BUILD_DEPENDS=	${PORTSDIR}/plan9/sam/work/libframe/libframe.a:${PORTSDIR}/plan9/sam
+
+OPSYS!= 	uname -s
+.if (${OPSYS} == "NetBSD")
+MANCOMPRESSED=	yes
+.endif
+
+MAN1=		9term.1
 
 NO_WRKSUBDIR=	yes
 
