--- a/plan9/9wm/Makefile
+++ b/plan9/9wm/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.2 1997/10/09 14:35:19 agc Exp $
+# $NetBSD: Makefile,v 1.3 1997/10/22 00:40:52 hubertf Exp $
 # New ports collection makefile for:    9wm
 # Version required:     1.1
 # Date created:         Sun Aug 13 12:36:14 CDT 1995
@@ -19,5 +19,7 @@ EXTRACT_CMD=		zcat
 EXTRACT_BEFORE_ARGS=
 EXTRACT_AFTER_ARGS=	|sh
 USE_IMAKE=	yes
+
+MAN1=		9wm.0
 
 .include <bsd.port.mk>
