--- a/shells/tcsh/Makefile
+++ b/shells/tcsh/Makefile
@@ -1,3 +1,4 @@
+# $NetBSD: Makefile,v 1.2 1997/10/24 15:55:06 agc Exp $
 # New ports collection makefile for:	tcsh
 # Version required:     6.07.02
 # Date created:		22 August 1994
