--- a/x11/Makefile
+++ b/x11/Makefile
@@ -29,7 +29,7 @@
 #    SUBDIR += getbdf
 #    SUBDIR += gwm
 #    SUBDIR += iv
-#    SUBDIR += lesstif
+    SUBDIR += lesstif
 #    SUBDIR += libdnd
 #    SUBDIR += libsx
 #    SUBDIR += lupe
