Add asclock, fvwm2, tkirc

--- a/x11/Makefile
+++ b/x11/Makefile
@@ -6,6 +6,7 @@
 #    SUBDIR += XFree86-contrib
 #    SUBDIR += Xaw3d
 #    SUBDIR += afterstep
+    SUBDIR += asclock
 #    SUBDIR += auis
 #    SUBDIR += bclock
 #    SUBDIR += blast
@@ -23,7 +24,7 @@
 #    SUBDIR += filerunner
 #    SUBDIR += freefonts
 #    SUBDIR += fvwm
-#    SUBDIR += fvwm2
+    SUBDIR += fvwm2
 #    SUBDIR += fvwm2-english
 #    SUBDIR += fvwm95
 #    SUBDIR += getbdf
@@ -55,6 +56,7 @@
     SUBDIR += tk80
 #    SUBDIR += tkdesk
 #    SUBDIR += tkgoodstuff
+    SUBDIR += tkirc
 #    SUBDIR += tvtwm
 #    SUBDIR += viewfax
 #    SUBDIR += wm2
