move tkcron, tkinfo, tkman, unclutter, xgas, xless, xpns and xtimer into x11 via repository copy

--- a/x11/Makefile
+++ b/x11/Makefile
@@ -54,10 +54,14 @@
 #    SUBDIR += tk41
 #    SUBDIR += tk42
     SUBDIR += tk80
+    SUBDIR += tkcron
 #    SUBDIR += tkdesk
 #    SUBDIR += tkgoodstuff
     SUBDIR += tkirc
+    SUBDIR += tkinfoc
+    SUBDIR += tkman
 #    SUBDIR += tvtwm
+    SUBDIR += unclutter
 #    SUBDIR += viewfax
 #    SUBDIR += wm2
 #    SUBDIR += x3270
@@ -77,13 +81,16 @@
     SUBDIR += xfishtank
 #    SUBDIR += xfm
 #    SUBDIR += xforms
+    SUBDIR += xgas
 #    SUBDIR += xgrab
 #    SUBDIR += xkeycaps
+    SUBDIR += xless
 #    SUBDIR += xloadimage
     SUBDIR += xlockmore
     SUBDIR += xmascot
 #    SUBDIR += xmbdfed
 #    SUBDIR += xmold
+    SUBDIR += xpns
 #    SUBDIR += xpostit
 #    SUBDIR += xpostitPlus
 #    SUBDIR += xprompt
@@ -91,6 +98,7 @@
 #    SUBDIR += xsnow
 #    SUBDIR += xtacy
 #    SUBDIR += xtestpicture
+    SUBDIR += xtimer
 #    SUBDIR += xtoolwait
 #    SUBDIR += xview-clients
 #    SUBDIR += xview-config
