--- a/misc/git/Makefile
+++ b/misc/git/Makefile
@@ -3,7 +3,7 @@
 # Date created:		12 Jul 1995
 # Whom:			torstenb@FreeBSD.ORG
 #
-# $NetBSD: Makefile,v 1.2 1997/10/24 01:17:57 hubertf Exp $
+# $NetBSD: Makefile,v 1.3 1997/12/22 07:45:46 hubertf Exp $
 # FreeBSD Id: Makefile,v 1.8 1996/11/21 11:54:39 asami Exp
 #
 
@@ -12,7 +12,7 @@ CATEGORIES=	misc
 MASTER_SITES=	${MASTER_SITE_GNU}
 
 GNU_CONFIGURE=	YES
-CONFIGURE_ARGS=	${ARCH}--netbsd
+CONFIGURE_ARGS+=	${ARCH}--netbsd
 RUN_DEPENDS=	${PREFIX}/bin/install-info:${PORTSDIR}/devel/gtexinfo
 MAN1=		git.1 gitaction.1 gitmount.1 gitcmp.1 gitkeys.1 \
 		gitredir.1 gitrgrep.1 gitps.1 gitview.1
