--- a/net/scotty/Makefile
+++ b/net/scotty/Makefile
@@ -3,7 +3,7 @@
 # Date created:		18 Februar 1995
 # Whom:			Gennady Sorokopud <gena@netvision.net.il>
 #
-# $NetBSD: Makefile,v 1.2 1997/11/23 22:26:53 hubertf Exp $
+# $NetBSD: Makefile,v 1.3 1997/12/22 07:45:49 hubertf Exp $
 # FreeBSD Id: Makefile,v 1.21 1997/08/27 23:01:53 cwt Exp
 #
 
@@ -16,7 +16,7 @@ MAINTAINER=	phk@freebsd.org
 LIB_DEPENDS=	tk80\\.1\\.:${PORTSDIR}/x11/tk80
 
 GNU_CONFIGURE=  yes
-CONFIGURE_ARGS= --with-tcl-config=${PREFIX}/lib/tcl8.0 \
+CONFIGURE_ARGS+= --with-tcl-config=${PREFIX}/lib/tcl8.0 \
 		--with-tk-config=${PREFIX}/lib/tk8.0
 
 WRKSRC=${WRKDIR}/${DISTNAME}/unix
