--- a/security/sudo/Makefile
+++ b/security/sudo/Makefile
@@ -3,7 +3,7 @@
 # Date created:         Sun Dec 14 23:01:32 MET 1997
 # Whom:                 soren@t.dk
 #
-# $NetBSD: Makefile,v 1.2 1997/12/14 23:38:21 hubertf Exp $
+# $NetBSD: Makefile,v 1.3 1997/12/22 07:45:53 hubertf Exp $
 # FreeBSD Id: Makefile,v 1.9 1997/11/12 03:24:41 obrien Exp
 #
 
@@ -16,7 +16,7 @@ EXTRACT_SUFX=	.tar.Z
 MAINTAINER=	erich@rrnet.com
 
 GNU_CONFIGURE=	yes
-CONFIGURE_ARGS=	--with-C2 --with-skey --with-fbsdops
+CONFIGURE_ARGS+=	--with-C2 --with-skey --with-fbsdops
 WRKSRC=		${WRKDIR}/sudo.v1.5.3
 MAN5=		sudoers.5
 MAN8=		sudo.8 visudo.8
