--- a/x11/Makefile
+++ b/x11/Makefile
@@ -4,7 +4,7 @@
 #    SUBDIR += FWF
 #    SUBDIR += XFree86
 #    SUBDIR += XFree86-contrib
-#    SUBDIR += Xaw3d
+    SUBDIR += Xaw3d
 #    SUBDIR += afterstep
     SUBDIR += asclock
 #    SUBDIR += auis
