add and enable dxpc.

--- a/x11/Makefile
+++ b/x11/Makefile
@@ -15,6 +15,7 @@
 #    SUBDIR += camltk41
     SUBDIR += ctwm
 #    SUBDIR += dclock
+    SUBDIR += dxpc
 #    SUBDIR += emiclock
 #    SUBDIR += emu
 #    SUBDIR += enlightenment
