--- a/graphics/gdk-pixbuf/Makefile
+++ b/graphics/gdk-pixbuf/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.12 2001/03/04 18:27:34 tron Exp $
+# $NetBSD: Makefile,v 1.13 2001/03/18 04:33:53 mjl Exp $
 #
 .include "Makefile.common"
 
-PKGNAME=	${DISTNAME}nb2
+PKGNAME=	${DISTNAME}
 
 COMMENT=	the GNOME image loading library
 
