Move files from postfix-current to postfix, as that's actually the latest release (it's also in the base src).
Adresses PR 12426 by Martti Kuparinen <martti.kuparinen@iki.fi>

--- a/mail/postfix/files/mailer.conf
+++ b/mail/postfix/files/mailer.conf
@@ -1,4 +1,4 @@
-#	$NetBSD: mailer.conf,v 1.1 1999/05/30 18:18:30 tron Exp $
+#	$NetBSD: mailer.conf,v 1.2 2001/03/20 12:50:50 hubertf Exp $
 #
 # Use "postfix" as replacement for "sendmail".
 #
