--- a/mk/SunOS.x11.dist
+++ b/mk/SunOS.x11.dist
@@ -1,4 +1,4 @@
-#     $NetBSD: SunOS.x11.dist,v 1.5 2001/03/16 17:22:38 tron Exp $
+#     $NetBSD: SunOS.x11.dist,v 1.6 2001/03/28 12:09:36 tron Exp $
 #     FreeBSD Id: BSD.x11.dist,v 1.2 1997/06/10 07:55:10 asami Exp
 #
 
@@ -289,5 +289,6 @@
         ..
 	fonts
 	..
+	pixmaps
     ..
 ..
