pkg_install-20100420: Extract dependencies of libarchive from the pkgconfig file and thereby drop knowledge of the needed libraries.
At least some versions of HP-UX are known to not support %zu, add a
workaround. This is using the black list approach for now.

Recognize xz as compression type for pkg_create.

The first time an error is hit while fetching packages, try to reget
from the same position. This works around the server closing the
connection while fetching dependencies.

--- a/pkgtools/pkg_install/files/admin/Makefile.in
+++ b/pkgtools/pkg_install/files/admin/Makefile.in
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.in,v 1.19 2010/03/19 12:49:53 wiz Exp $
+# $NetBSD: Makefile.in,v 1.20 2010/04/20 00:39:12 joerg Exp $
 
 srcdir=		@srcdir@
 
@@ -28,7 +28,7 @@ PROG=		pkg_admin
 SCRIPTS=	audit-packages download-vulnerability-list
 
 .if empty(BOOTSTRAP)
-LIBS=		-linstall -lbz2 -lfetch -larchive -lbz2 -lz
+LIBS=		-linstall -lfetch
 .if !empty(SSL_SUPPORT)
 LIBS+=		-lcrypto
 CFLAGS+=	-DHAVE_SSL
